src/component/LandingPageV2/FP2/style.css
.parent {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  padding: 6vh;
}

.column-1 {
  display: flex;
  flex-direction: column;
}

.column-2 {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

.column-3 {
  display: flex;
  flex-direction: column;
}

.client {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.client-text {
  font-family: Outfit 500;
  font-size: 3vh;
  font-weight: 700;
  padding-right: 2vh;
}

.name-text {
  font-family: Outfit 500;
  font-size: 3vh;
}

.school {
  font-family: Outfit 500;
  font-size: 2vh;
  text-transform: uppercase;
}

.name-order {
  display: flex;
  flex-direction: column;
  margin-right: 10vh;
}

.client-blurb {
  width: 40vh;
  padding-top: 6vh;
  align-self: flex-end;
}

.bottom-corner {
  /* padding-top: 2.5em; */
  padding-bottom: 5vh;
  align-self: flex-start;
}

.product-img-container {
  padding-top: 5vh;
  padding-left: 14vh;
  margin-top: 14vh;
}

.mockup-img {
  /* position: absolute; */
  /* height: 30em; */
  width: 74vh;
  margin-left: -12vh;
  min-height: 100%;
}

.top-corner {
  align-self: flex-end;
  height: 40vh;
}

.quote-container {
  /* align-self: flex-end; */
  width: 80%;
  /* padding-top: 1em; */
  /* padding-right: 2em; */
}

/* .fp1-quotation-mark {
    color: #ffbf3c;
    font-family: "Space Mono 700";
    font-size: 3vw;
    line-height: 50%;
  } */

blockquote {
  font-family: Outfit 300;
  font-size: 1.2vw;
  position: relative;
  margin: 1vh;
  margin-top: 10vh;
  margin-left: 6vh;
  /* padding: 0.5em 2em 0.5em 3em; */
}
/* Thanks: http://callmenick.com/post/styling-blockquotes-with-css-pseudo-classes */
blockquote:before {
  font-family: "Space Mono 700";
  color: #ffbf3c;
  position: absolute;
  font-size: 6vh;
  line-height: 1;
  top: 0;
  left: -1.5vh;
  content: "\201C";
}
blockquote:after {
  font-family: "Space Mono 700";
  color: #ffbf3c;
  position: absolute;
  float: right;
  font-size: 6vh;
  line-height: 1;
  right: 0vh;
  bottom: -1vh;
  content: "\201D";
}

h1 {
  font-family: "Space Mono";
  font-style: normal;
  font-weight: bolder;
  font-size: 4.5em;
  text-transform: uppercase;
}

#fp2-header {
  font-size: 9vh;
}

#fp2-teams {
  font-family: "Space Mono"; 
  font-size: 3vh;
}

@media only screen and (max-device-width: 650px) {
  .parent {
    flex-direction: column;
  }

  #fp2-header {
    font-size: 12vw;
  }

  #fp2-teams {
    font-size: 5vw;
  }

  .client-blurb {
    padding-top: 3vh;
    margin: auto;
    margin-left: -6vw;
  }

  .name-order {
    margin-right: 0;
  }

  .client {
    align-items: baseline
  }

  .client-blurb p {
    font-size: 2vh;
  }

  .product-img-container {
    padding-top: 0;
    margin-top: 0;
  }

  .mockup-img {
    width: unset;
  }

  .bottom-corner, .top-corner {
    display: none;
  }

  .quote-container {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
  }

  .quote-container blockquote {
    font-size: 2vh;
    margin-left: 0;
  }

  .quote-container blockquote::before {
    top: -3.5vh;
    left: 1.5vh;
  }

  .quote-container blockquote::after {
    left: -0.5vh;
    bottom: -6vh;
  }
}

